fixed zoom on mobile video widths

--- a/src/containers/PageBuilder/SectionBuilder/SectionBuilder.module.css
+++ b/src/containers/PageBuilder/SectionBuilder/SectionBuilder.module.css
@@ -105,7 +105,7 @@
 }
 
 .blockContainer {
-  padding: 64px 32px 0 32px;
+  padding: 32px 32px 0 32px;
 
   &:first-child {
     padding: 0 32px;
